<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/Inbox" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/Sent" />

    </group>

    <item
        android:title="@string/Addition">
        <menu>
            <item
                android:id="@+id/nav_NewMail"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/NewMail" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/Exit" />

        </menu>
    </item>

</menu>