<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:background="@drawable/side_nav_bar"
    android:orientation="horizontal"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <CheckBox
        android:id="@+id/check_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mail_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/time"/>

            <TextView
                android:id="@+id/mail_from"
                android:layout_height="match_parent"
                android:textStyle="italic"
                android:maxLines="1"
                android:text="@string/from"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content" />

            <TextView
                android:id="@+id/mail_subject"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="italic"
                android:maxLines="1"
                android:text="@string/subject"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    </LinearLayout>

</LinearLayout>